--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Liris's Blog
-subtitle:
+title: Liris'
+subtitle: 
 description:
 author: Liris
 language:
